# docs/swagger.yaml
@@ -168,52 +168,4 @@ paths:
       summary: Delete Emiten By Id
       tags:
       - Emiten
-  /webinar/deleteById:
-    delete:
-      parameters:
-      - description: id
-        in: path
-        name: id
-        required: true
-        type: string
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/helper.Response'
-        "400":
-          description: Bad Request
-          schema:
-            type: object
-        "404":
-          description: Not Found
-          schema:
-            type: object
-      summary: Delete Webinar By Id
-      tags:
-      - Webinar
-  /webinar/getById/{id}:
-    get:
-      parameters:
-      - description: id
-        in: path
-        name: id
-        required: true
-        type: string
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/helper.Response'
-        "400":
-          description: Bad Request
-          schema:
-            type: object
-        "404":
-          description: Not Found
-          schema:
-            type: object
-      summary: Delete Webinar By Id
-      tags:
-      - Webinar
 swagger: "2.0"
